syntax = "proto3";

option go_package = "./proto;proto";
// import "google/api/annotations.proto";
import "google/api/annotations.proto";

service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/v1/helloworld/sayhello/{name}"
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

